[gd_scene load_steps=4 format=3 uid="uid://cwoqhme8j6mm0"]

[ext_resource type="Script" uid="uid://bhw5owkxkm55i" path="res://Interface/GlobalInterface/UnitListItem.gd" id="1_suabm"]
[ext_resource type="Texture2D" uid="uid://dspmskbqb5kx" path="res://Graphics/Portraits/f_03.png" id="2_3ny6k"]
[ext_resource type="PackedScene" uid="uid://bnwh3ltkopbuh" path="res://Interface/GlobalInterface/LabeledField.tscn" id="3_48wti"]

[node name="UnitListItem" type="PanelContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -139.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_suabm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_type_variation = &"MainLayoutContainer"
alignment = 1

[node name="PortraitFrame" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"PortraitFrame"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/PortraitFrame"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_3ny6k")
expand_mode = 1

[node name="StatsBlock" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/StatsBlock"]
layout_mode = 2
alignment = 1

[node name="Header" type="HBoxContainer" parent="HBoxContainer/StatsBlock/VBoxContainer"]
layout_mode = 2

[node name="LabeledField" parent="HBoxContainer/StatsBlock/VBoxContainer/Header" instance=ExtResource("3_48wti")]
layout_mode = 2
/linked_class = &"Adventurer"
/linked_property = &"name"

[node name="LevelAndClass" type="HBoxContainer" parent="HBoxContainer/StatsBlock/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Level" parent="HBoxContainer/StatsBlock/VBoxContainer/Header/LevelAndClass" instance=ExtResource("3_48wti")]
layout_mode = 2
label = "Lv"
label_divider = "."
/linked_class = &"Adventurer"
/linked_property = &"level"

[node name="Class" parent="HBoxContainer/StatsBlock/VBoxContainer/Header/LevelAndClass" instance=ExtResource("3_48wti")]
layout_mode = 2
/linked_class = &"Adventurer"
/linked_property = &"adventurer_class"

[node name="MainStats" type="GridContainer" parent="HBoxContainer/StatsBlock/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="HitPoints" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "HP"
show_max = true
/linked_class = &"Adventurer"
/linked_property = &"current_hp"
/max_val_property = &"stat_hp"

[node name="MagicPoints" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "MP"
show_max = true
/linked_class = &"Adventurer"
/linked_property = &"current_mp"
/max_val_property = &"stat_mp"

[node name="AttackPower" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "ATK"
/linked_class = &"Adventurer"
/linked_property = &"stat_atk"

[node name="DefensePower" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "DEF"
/linked_class = &"Adventurer"
/linked_property = &"stat_def"

[node name="MagicPower" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "MAG"
/linked_class = &"Adventurer"
/linked_property = &"stat_mag"

[node name="MagicDefense" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "RES"
/linked_class = &"Adventurer"
/linked_property = &"stat_res"

[node name="Dexterity" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "DEX"
/linked_class = &"Adventurer"
/linked_property = &"stat_dex"

[node name="Charisma" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "CHA"
/linked_class = &"Adventurer"
/linked_property = &"stat_cha"

[node name="Luck" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "LUK"
/linked_class = &"Adventurer"
/linked_property = &"stat_luk"

[node name="Experience" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "EXP"
/linked_class = &"Adventurer"
/linked_property = &"experience"

[node name="ToNext" parent="HBoxContainer/StatsBlock/VBoxContainer/MainStats" instance=ExtResource("3_48wti")]
layout_mode = 2
size_flags_horizontal = 3
label = "TO_NEXT"
/linked_class = &"Adventurer"
/linked_property = &"next_level_exp"

[node name="ActionButtons" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1
